--- a/script/kt/template/entity.mustache
+++ b/script/kt/template/entity.mustache
@@ -16,13 +16,13 @@ import java.util.*
 data class {{name}}(
 
 {{#table.fields}}
-    @ApiModelProperty(value = "{{comment}}",{{#not_null}} required = true{{/not_null}})
-    var {{field_name}}: {{java_type}}{{#not_null}}? = null{{/not_null}},
+    @ApiModelProperty(value = "{{comment}}"{{^not_null}}, required = true{{/not_null}})
+    var {{field_name}}: {{java_type}}{{^not_null}}? = null{{/not_null}},
 {{/table.fields}}
 ) {
 
 {{#table.standard_fields}}
-    lateint var {{field_name}}: {{java_type}}
+    lateinit var {{field_name}}: {{java_type}}
 {{/table.standard_fields}}
 
 }
