--- a/script/kt/template/service_impl.mustache
+++ b/script/kt/template/service_impl.mustache
@@ -1,105 +1,58 @@
 package {{package}}
 
-import {{entity_pcakage}}.{{entity_class}}
+import {{entity_package}}.{{entity_class}}
 import {{dao_package}}.{{dao_class}}
+import {{dto_package}}.{{dto_class}}
 import {{service_package}}.{{service_class}}
+import github.afezeria.hymn.common.util.DataNotFoundException
+import github.afezeria.hymn.common.util.*
 import org.springframework.stereotype.Component
-import java.time.LocalDateTime
-import java.util.*
 
 /**
-* @author afezeria
-*/
+ * @author afezeria
+ */
 @Component
 class {{name}}(
-private val dbService: DataBaseService,
-private val sessionService:SessionService,
-) {
-
-    val table = CoreBObjects()
-
-    override fun deleteById(id: String): Int {
-        return dbService.db().delete(table) { it.id eq id }
+    private val {{dao_name}}: {{dao_class}},
+) : {{service_class}} {
+    override fun removeById(id: String): Int {
+        {{dao_name}}.selectById(id)
+            ?: throw DataNotFoundException("{{entity_class}}".msgById(id))
+        val i = {{dao_name}}.deleteById(id)
+        return i
     }
 
-    override fun update(e: CoreBObject): Int {
-        requireNotNull(e.id) { "can not update CoreBObject when id is null" }
-        val session = sessionService.getSession()
-        val accountId = session.accountId
-        val accountName = session.accountName
-        return dbService.db().update(table) {
-            set(it.name, e.name)
-            set(it.api, e.api)
-            set(it.sourceTable, e.sourceTable)
-            set(it.active, e.active)
-            set(it.type, e.type)
-            set(it.remoteUrl, e.remoteUrl)
-            set(it.remoteToken, e.remoteToken)
-            set(it.moduleApi, e.moduleApi)
-            set(it.remark, e.remark)
-            set(it.canInsert, e.canInsert)
-            set(it.canUpdate, e.canUpdate)
-            set(it.canDelete, e.canDelete)
-            set(it.createById, e.createById)
-            set(it.createBy, e.createBy)
-            set(it.createDate, e.createDate)
-
-            set(it.modifyById, accountId)
-            set(it.modifyBy, accountName)
-            set(it.modifyDate, LocalDateTime.now())
-            where {
-                it.id eq e.id
-            }
-        }
+    override fun update(id: String, dto: {{dto_class}}): Int {
+        val e = {{dao_name}}.selectById(id)
+            ?: throw DataNotFoundException("{{entity_class}}".msgById(id))
+        dto.update(e)
+        val i = {{dao_name}}.update(e)
+        return i
     }
 
-    override fun insert(e: CoreBObject): Int {
-        val now = LocalDateTime.now()
-        val session = sessionService.getSession()
-        val accountId = session.accountId
-        val accountName = session.accountName
-        e.createDate = now
-        e.modifyDate = now
-        e.createById = accountId
-        e.modifyById = accountId
-        e.createBy = accountName
-        e.modifyBy = accountName
-        return dbService.db().insert(table) {
-            set(it.name, e.name)
-            set(it.api, e.api)
-            set(it.sourceTable, e.sourceTable)
-            set(it.active, e.active)
-            set(it.type, e.type)
-            set(it.remoteUrl, e.remoteUrl)
-            set(it.remoteToken, e.remoteToken)
-            set(it.moduleApi, e.moduleApi)
-            set(it.remark, e.remark)
-            set(it.canInsert, e.canInsert)
-            set(it.canUpdate, e.canUpdate)
-            set(it.canDelete, e.canDelete)
-            set(it.createById, e.createById)
-            set(it.createBy, e.createBy)
-            set(it.modifyById, e.modifyById)
-            set(it.modifyBy, e.modifyBy)
-            set(it.createDate, e.createDate)
-            set(it.modifyDate, e.modifyDate)
-
-        }
+    override fun create(dto: {{dto_class}}): String {
+        val e = dto.toEntity()
+        val id = {{dao_name}}.insert(e)
+        return id
     }
 
-    override fun findAll(): List<CoreBObject> {
-        return dbService.db().from(table)
-            .select(table.columns)
-            .map { table.createEntity(it) }
+    override fun findAll(): List<{{entity_class}}> {
+        return {{dao_name}}.selectAll()
     }
 
-    override fun findById(id: String): CoreBObject? {
-        return dbService.db().from(table)
-            .select(table.columns)
-            .limit(0, 1)
-            .map { table.createEntity(it) }
-            .firstOrNull()
+
+    override fun findById(id: String): {{entity_class}}? {
+        return {{dao_name}}.selectById(id)
     }
 
+{{#table.index_arr}}
+    override fun findBy{{fun_name}}(
+{{#column_arr}}        {{field_name}}: {{java_type}},
+{{/column_arr}}
+    ): {{#is_uk}}{{entity_class}}?{{/is_uk}}{{^is_uk}}List<{{entity_class}}>{{/is_uk}} {
+        return {{dao_name}}.selectBy{{fun_name}}({{#column_arr}}{{field_name}},{{/column_arr}})
+    }
+
+{{/table.index_arr}}
 
 }
