--- a/script/kt/template/table.mustache
+++ b/script/kt/template/table.mustache
@@ -1,38 +1,39 @@
-package {{package_name}}
+package {{package}}
 
 import org.ktorm.dsl.QueryRowSet
 import org.ktorm.schema.*
-import {{entity_package_name}}.{{entity_class}}
+import {{entity_package}}.{{entity_class}}
 
 /**
-* @author afezeria
-*/
-class {{name}}(alias: String? = null) : BaseTable<{{entity_class}}>("{{_table.name}}", alias) {
+ * @author afezeria
+ */
+class {{name}}(alias: String? = null) :
+    BaseTable<{{entity_class}}>("{{table.name}}", schema = "hymn", alias = alias) {
 
-{{#fields}}
-  val {{field_name}} = {{ktorm_type}}("{{column_name}}")
-{{/fields}}
-{{#lateinit_fields}}
-  val {{field_name}} = {{ktorm_type}}("{{column_name}}")
-{{/lateinit_fields}}
+{{#table.fields}}
+    val {{field_name}} = {{ktorm_type}}("{{column_name}}")
+{{/table.fields}}
+{{#table.standard_fields}}
+    val {{field_name}} = {{ktorm_type}}("{{column_name}}")
+{{/table.standard_fields}}
 
-override fun doCreateEntity(row: QueryRowSet, withReferences: Boolean) = {{entity_class}}(
-{{#fields}}
+    override fun doCreateEntity(row: QueryRowSet, withReferences: Boolean) = {{entity_class}}(
+{{#table.fields}}
   {{#not_null}}
-    {{field_name}} = requireNotNull(row[this.{{field_name}}]) {"Field {{entity_class}}.{{field_name}} should not be null"},
+        {{field_name}} = requireNotNull(row[this.{{field_name}}]) { "field {{entity_class}}.{{field_name}} should not be null" },
   {{/not_null}}
   {{^not_null}}
-    {{field_name}} = row[this.{{field_name}}]{{default}},
+        {{field_name}} = row[this.{{field_name}}]{{default}},
   {{/not_null}}
-{{/fields}}
-).also{
-{{#lateinit_fields}}
-  {{#notnull}}
-    it.{{field_name}} = requireNotNull(row[this.{{field_name}}]) {"Field {{entity_class}}.{{field_name}} should not be null"}
-  {{/notnull}}
-  {{^notnull}}
-    it.{{field_name}} = row[this.{{field_name}}]{{default}}
-  {{/notnull}}
-{{/lateinit_fields}}
-}
+{{/table.fields}}
+    ).also {
+{{#table.standard_fields}}
+  {{#not_null}}
+        it.{{field_name}} = requireNotNull(row[this.{{field_name}}]) { "field {{entity_class}}.{{field_name}} should not be null" }
+  {{/not_null}}
+  {{^not_null}}
+        it.{{field_name}} = row[this.{{field_name}}]{{default}}
+  {{/not_null}}
+{{/table.standard_fields}}
+    }
 }
