--- a/script/kt/template/dao.mustache
+++ b/script/kt/template/dao.mustache
@@ -5,6 +5,7 @@ import {{table_package}}.{{table_class}}
 import github.afezeria.hymn.common.platform.DataBaseService
 import github.afezeria.hymn.common.platform.SessionService
 import org.springframework.stereotype.Component
+import org.springframework.beans.factory.annotation.Autowired
 import org.ktorm.dsl.*
 import java.time.LocalDateTime
 import java.util.*
@@ -13,10 +14,12 @@ import java.util.*
 * @author afezeria
 */
 @Component
-class {{name}}(
-    private val dbService: DataBaseService,
-    private val sessionService:SessionService,
-) {
+class {{name}} {
+
+    @Autowired
+    private lateinit var dbService: DataBaseService
+    @Autowired
+    private lateinit var sessionService:SessionService
 
     val table = {{table_class}}()
 
