--- a/script/kt/template/service_impl.mustache
+++ b/script/kt/template/service_impl.mustache
@@ -6,15 +6,19 @@ import {{dto_package}}.{{dto_class}}
 import {{service_package}}.{{service_class}}
 import github.afezeria.hymn.common.util.DataNotFoundException
 import github.afezeria.hymn.common.util.*
-import org.springframework.stereotype.Component
+import org.springframework.stereotype.Service
+import org.springframework.beans.factory.annotation.Autowired
 
 /**
  * @author afezeria
  */
-@Component
-class {{name}}(
-    private val {{dao_name}}: {{dao_class}},
-) : {{service_class}} {
+@Service
+class {{name}} : {{service_class}} {
+
+    @Autowired
+    lateinit var {{dao_name}}: {{dao_class}}
+
+
     override fun removeById(id: String): Int {
         {{dao_name}}.selectById(id)
             ?: throw DataNotFoundException("{{entity_class}}".msgById(id))
