--- a/script/kt/template/service_impl.mustache
+++ b/script/kt/template/service_impl.mustache
@@ -4,6 +4,7 @@ import {{entity_package}}.{{entity_class}}
 import {{dao_package}}.{{dao_class}}
 import {{dto_package}}.{{dto_class}}
 import {{service_package}}.{{service_class}}
+import github.afezeria.hymn.common.platform.DataBaseService
 import github.afezeria.hymn.common.util.DataNotFoundException
 import github.afezeria.hymn.common.util.*
 import org.springframework.stereotype.Service
@@ -16,7 +17,10 @@ import org.springframework.beans.factory.annotation.Autowired
 class {{name}} : {{service_class}} {
 
     @Autowired
-    lateinit var {{dao_name}}: {{dao_class}}
+    private lateinit var {{dao_name}}: {{dao_class}}
+
+    @Autowired
+    private lateinit var dbService: DataBaseService
 
 
     override fun removeById(id: String): Int {
@@ -40,7 +44,7 @@ class {{name}} : {{service_class}} {
         return id
     }
 
-    override fun findAll(): List<{{entity_class}}> {
+    override fun findAll(): MutableList<{{entity_class}}> {
         return {{dao_name}}.selectAll()
     }
 
@@ -49,11 +53,16 @@ class {{name}} : {{service_class}} {
         return {{dao_name}}.selectById(id)
     }
 
+    override fun findByIds(ids: List<String>): MutableList<{{entity_class}}> {
+        return {{dao_name}}.selectByIds(ids)
+    }
+
+
 {{#table.index_arr}}
     override fun findBy{{fun_name}}(
 {{#column_arr}}        {{field_name}}: {{java_type}},
 {{/column_arr}}
-    ): {{#is_uk}}{{entity_class}}?{{/is_uk}}{{^is_uk}}List<{{entity_class}}>{{/is_uk}} {
+    ): {{#is_uk}}{{entity_class}}?{{/is_uk}}{{^is_uk}}MutableList<{{entity_class}}>{{/is_uk}} {
         return {{dao_name}}.selectBy{{fun_name}}({{#column_arr}}{{field_name}},{{/column_arr}})
     }
 
