--- a/tools/kt/template/dto.mustache
+++ b/tools/kt/template/dto.mustache
@@ -10,7 +10,7 @@ import java.util.*
  */
 class {{name}}(
 {{#table.fields}}
-    @ApiModelProperty(value = "{{comment}}"{{^not_null}}, required = true{{/not_null}})
+    @ApiModelProperty(value = "{{comment}}"{{#not_null}}, required = true{{/not_null}})
     var {{field_name}}: {{java_type}}{{^not_null}}? = null{{/not_null}},
 {{/table.fields}}
 ){
