--- a/tools/kt/template/controller.mustache
+++ b/tools/kt/template/controller.mustache
@@ -3,13 +3,14 @@ package {{package}}
 import {{service_package}}.{{service_class}}
 import {{entity_package}}.{{entity_class}}
 import {{dto_package}}.{{dto_class}}
+import github.afezeria.hymn.common.util.*
 import github.afezeria.hymn.common.util.msgById
 import github.afezeria.hymn.common.util.DataNotFoundException
-import github.afezeria.hymn.common.web.RestResp
-import github.afezeria.hymn.common.web.successRestResp
 import org.springframework.web.bind.annotation.*
 import java.time.LocalDateTime
 import io.swagger.annotations.*
+import github.afezeria.hymn.common.ann.Function
+import github.afezeria.hymn.common.constant.AccountType
 import java.util.*
 
 
@@ -19,49 +20,58 @@ import java.util.*
 @RestController
 @RequestMapping("{{router}}")
 @Api({{#table}}{{#tag}}tags = ["{{.}}接口"]{{/tag}}{{/table}})
-class {{name}}(
-    val {{service_name}}: {{service_class}}
-) {
+class {{name}} {
 
+    private lateinit var {{service_name}}: {{service_class}}
 
-    @ApiOperation(value = "查询全部数据", notes = "")
+    @Function(AccountType.ADMIN)
+    @ApiOperation
+(value = "查询全部数据", notes = "")
     @GetMapping
-    fun findAll(): RestResp<{{entity_class}}> {
+    fun findAll(): ApiResp<List<{{entity_class}}>> {
         val all = {{service_name}}.findAll()
-        return successRestResp(all)
+        return successApiResp(all)
     }
 
 
-    @ApiOperation(value = "根据id查询", notes = "无参数时查询全部数据")
+    @Function(AccountType.ADMIN)
+    @ApiOperation
+(value = "根据id查询", notes = "无参数时查询全部数据")
     @GetMapping("/{id}")
-    fun findById(@PathVariable("id") id: String): RestResp<{{entity_class}}> {
+    fun findById(@PathVariable("id") id: String): ApiResp<{{entity_class}}> {
         val entity = {{service_name}}.findById(id)
             ?: throw DataNotFoundException("CoreAccount".msgById(id))
-        return successRestResp(entity)
+        return successApiResp(entity)
     }
 
 
-    @ApiOperation(value = "新建", notes = "")
+    @Function(AccountType.ADMIN)
+    @ApiOperation
+(value = "新建", notes = "")
     @PostMapping
-    fun create(@RequestBody dto: {{dto_class}}): RestResp<String> {
+    fun create(@RequestBody dto: {{dto_class}}): ApiResp<String> {
         val id = {{service_name}}.create(dto)
-        return successRestResp(id)
+        return successApiResp(id)
     }
 
 
-    @ApiOperation(value = "更新", notes = "")
+    @Function(AccountType.ADMIN)
+    @ApiOperation
+(value = "更新", notes = "")
     @PutMapping("/{id}")
     fun update(@PathVariable("id") id: String,
-               @RequestBody dto: {{dto_class}}): RestResp<Int> {
+               @RequestBody dto: {{dto_class}}): ApiResp<Int> {
         val count = {{service_name}}.update(id, dto)
-        return successRestResp(count)
+        return successApiResp(count)
     }
 
 
-    @ApiOperation(value = "根据id删除", notes = "")
+    @Function(AccountType.ADMIN)
+    @ApiOperation
+(value = "根据id删除", notes = "")
     @DeleteMapping("/{id}")
-    fun delete(@PathVariable("id") id: String): RestResp<Int> {
+    fun delete(@PathVariable("id") id: String): ApiResp<Int> {
         val count = {{service_name}}.removeById(id)
-        return successRestResp(count)
+        return successApiResp(count)
     }
 }
