(tools) 更新代码生成模板

--- a/tools/kt/template/controller.mustache
+++ b/tools/kt/template/controller.mustache
@@ -5,7 +5,7 @@ import {{entity_package}}.{{entity_class}}
 import {{dto_package}}.{{dto_class}}
 import github.afezeria.hymn.common.util.*
 import github.afezeria.hymn.common.util.msgById
-import github.afezeria.hymn.common.util.DataNotFoundException
+import github.afezeria.hymn.common.exception.DataNotFoundException
 import org.springframework.web.bind.annotation.*
 import java.time.LocalDateTime
 import io.swagger.annotations.*
