--- a/tools/kt/template/service_impl.mustache
+++ b/tools/kt/template/service_impl.mustache
@@ -5,7 +5,7 @@ import {{dao_package}}.{{dao_class}}
 import {{dto_package}}.{{dto_class}}
 import {{service_package}}.{{service_class}}
 import github.afezeria.hymn.common.platform.DataBaseService
-import github.afezeria.hymn.common.util.DataNotFoundException
+import github.afezeria.hymn.common.exception.DataNotFoundException
 import github.afezeria.hymn.common.util.*
 import org.springframework.stereotype.Service
 import org.springframework.beans.factory.annotation.Autowired
