--- a/tools/kt/template/dao.mustache
+++ b/tools/kt/template/dao.mustache
@@ -3,111 +3,15 @@ package {{package}}
 import {{entity_package}}.{{entity_class}}
 import {{table_package}}.{{table_class}}
 import github.afezeria.hymn.common.platform.DataBaseService
-import github.afezeria.hymn.common.platform.SessionService
 import org.springframework.stereotype.Component
-import org.springframework.beans.factory.annotation.Autowired
-import org.ktorm.dsl.*
-import java.time.LocalDateTime
-import java.util.*
 
 /**
 * @author afezeria
 */
 @Component
-class {{name}} {
+class {{name}}(
+databaseService: DatabaseService
+) : AbstractDao<{{entity_class}}, {{table_class}}>({{table_class}}(), databaseService) {
 
-    @Autowired
-    private lateinit var dbService: DataBaseService
-    @Autowired
-    private lateinit var sessionService:SessionService
-
-    val table = {{table_class}}()
-
-
-    fun deleteById(id: String): Int {
-        return dbService.db().delete(table) { it.id eq id }
-    }
-
-    fun update(e: {{entity_class}}): Int {
-        requireNotNull(e.id) { "missing id, unable to update data" }
-        val session = sessionService.getSession()
-        e.modifyDate = LocalDateTime.now()
-        e.modifyById = session.accountId
-        e.modifyBy = session.accountName
-        return dbService.db().update(table) {
-{{#table.fields}}
-            set(it.{{field_name}}, e.{{field_name}})
-{{/table.fields}}
-            set(it.modifyById, e.modifyById)
-            set(it.modifyBy, e.modifyBy)
-            set(it.modifyDate, e.modifyDate)
-            where {
-                it.id eq e.id
-            }
-        }
-    }
-
-    fun insert(e: {{entity_class}}): String {
-        val now = LocalDateTime.now()
-        val session = sessionService.getSession()
-        val accountId = session.accountId
-        val accountName = session.accountName
-        e.createDate = now
-        e.modifyDate = now
-        e.createById = accountId
-        e.modifyById = accountId
-        e.createBy = accountName
-        e.modifyBy = accountName
-        return dbService.db().insertAndGenerateKey(table) {
-{{#table.fields}}
-            set(it.{{field_name}}, e.{{field_name}})
-{{/table.fields}}
-            set(it.createDate, e.createDate)
-            set(it.modifyDate, e.modifyDate)
-            set(it.createById, e.createById)
-            set(it.modifyById, e.modifyById)
-            set(it.createBy, e.createBy)
-            set(it.modifyBy, e.modifyBy)
-        } as String
-    }
-
-    fun selectAll(): MutableList<{{entity_class}}> {
-        return dbService.db().from(table)
-            .select(table.columns)
-            .mapTo(ArrayList()) { table.createEntity(it) }
-    }
-
-    fun selectById(id: String): {{entity_class}}? {
-        return dbService.db().from(table)
-            .select(table.columns)
-            .where { table.id eq id }
-            .limit(0, 1)
-            .map { table.createEntity(it) }
-            .firstOrNull()
-    }
-
-    fun selectByIds(ids: List<String>): MutableList<{{entity_class}}>{
-        return dbService.db().from(table)
-            .select(table.columns)
-            .where {
-                table.id inList ids
-            }.mapTo(ArrayList()) { table.createEntity(it) }
-    }
-
-{{#table.index_arr}}
-    fun selectBy{{fun_name}}(
-{{#column_arr}}        {{field_name}}: {{java_type}},
-{{/column_arr}}
-    ): {{#is_uk}}{{entity_class}}?{{/is_uk}}{{^is_uk}}MutableList<{{entity_class}}>{{/is_uk}} {
-        return dbService.db().from(table)
-            .select(table.columns)
-            .where {
-{{#column_arr}}                table.{{field_name}} eq {{field_name}}
-{{/column_arr}}
-            }.mapTo(ArrayList()) { table.createEntity(it) }{{#is_uk}}
-            .firstOrNull(){{/is_uk}}
-    }
-
-{{/table.index_arr}}
 
 }
